# solana-lottery-program

./: .gitignore  Anchor.toml  README.md  clientaccounts.env.example  collection.json  package.json  ticket.json
app/: .gitignore  README.md  package.json
app/src/: manifest.json
app/src/components/: CountDownTimer.tsx  SelectAndConnectWalletButton.tsx  index.tsx  program.tsx
app/src/idl/: no_loss_lottery.json
app/src/pages/: _app.tsx  _document.js  index.tsx
app/src/views/HomeView/: index.tsx  ticketcard.tsx
programs/no-loss-lottery/: Cargo.toml
programs/no-loss-lottery/src/: lib.rs
programs/no-loss-lottery/src/actions/: init_state.rs  mod.rs  request_result.rs  update_result.rs
sdk/: client.ts
sdk/scripts/: buy.ts  dispense.ts  draw.ts  initialize.ts  request.ts  stake.ts  watch.ts
sdk/scripts/vrf/: types.ts
sdk/scripts/vrf/utils/: anchor.ts
tests/: no-loss-lottery.ts
vrf/: const.ts  index.ts
vrf/actions/: create.ts  request.ts
vrf/utils/: anchor.ts
