[package]
name = "no-loss-lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "no_loss_lottery"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.0", features = ["init-if-needed"] }
anchor-spl = "0.22.0"
solana-program = "1.8.14"
spl-token-swap = { version = "2.1.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
switchboard-v2 = "0.1.8"
bytemuck = "1.7.2"